<resources>
    <string name="app_name">  बचत पासबुक</string>
    <string name="username"> \u0020\u0020खाता खोलेको नाम </string>
    <string name="password">    \u0020\u0020 पास्वोर्ड</string>
    <string name="title_activity_login">लागिन विवरण </string>
    <!-- Strings related to login -->
    <string name="login">बुजाउनोस </string>
    <string name="not_a_user">Not a user</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_dash_board">गृहपृष्टमा तपाइलाई  स्वागत छ ।</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="module" />
    <string name="vehicle" />
    <string name="textview" />

</resources>
