<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="373dp"
        android:layout_height="87dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shahakari" />

    <EditText
        android:id="@+id/textView2"
        android:layout_width="200dp"
        android:layout_height="40dp"

        android:autofillHints="on"
        android:drawableStart="@drawable/ic_action_user"
        android:drawableLeft="@drawable/ic_action_user"
        android:hint="@string/username"
        android:inputType="none|text"
        android:text=""
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="normal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.396"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.167"
        tools:text="Username"
        tools:textSize="18sp" />


    <EditText
        android:id="@+id/textView3"
        android:layout_width="200sp"
        android:layout_height="40sp"
        android:autofillHints="on"
        android:drawableStart="@drawable/ic_action_lock"
        android:drawableLeft="@drawable/ic_action_lock"
        android:hint="@string/password"
        android:inputType="none|textPassword"
        android:text=""
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.396"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.41"
        tools:text="Password"
        tools:textSize="18sp" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="289dp"
        android:layout_height="42dp"
        app:cardBackgroundColor="#0000FF"

        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.488">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="#0000FF"
                android:text="@string/login"

                tools:textSize="18sp" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/not_a_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.875" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="तपाईलाई स्वागत छ |"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>